--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </h3>
 <a href="./cal_expected_value.html?id=16">ギルティクラウン AA</a><br><br>
 <a href="./cal_expected_value.html?id=13">金田一少年の事件簿２</a><br><br>
-<a href="./cal_expected_value.遊2700km 199ver L9AZ</a><br><br>html?id=29">黄門ちゃま超寿～日本漫
+<a href="./cal_expected_value.html?id=29">黄門ちゃま超寿～日本漫遊2700km 199Ver, L9AZ</a><br><br>
 <a href="./cal_expected_value.html?id=40">攻殻機動隊S.A.C CXB</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
