--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </h3>
 <a href="./cal_expected_value.html?id=16">ギルティクラウン AA</a><br><br>
 <a href="./cal_expected_value.html?id=13">金田一少年の事件簿２</a><br><br>
-<a href="./cal_expected_value.html?id=29">黄門ちゃま超寿～日本漫遊2700km 199Ver, L9AZ</a><br><br>
+<a href="./cal_expected_value.html?id=29">黄門ちゃま超寿～日本漫遊2700km L9AZ</a><br><br>
 <a href="./cal_expected_value.html?id=40">攻殻機動隊S.A.C CXB</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
@@ -60,7 +60,7 @@
 <a href="./cal_expected_value.html?id=39">サイボーグ009VSデビルマン L-T</a><br><br>
 <a href="./cal_expected_value.html?id=11">地獄少女～弐 FPA 安心ルートver.</a><br><br>
 <a href="./cal_expected_value.html?id=33">地獄少女 宵伽 FPU</a><br><br>
-<a href="./cal_expected_value.html?id=1"> 夢幻闘乱 SWA</a><br><br>真・北斗無双
+<a href="./cal_expected_value.html?id=1">真・北斗無双 夢幻闘乱 SWA</a><br><br>
 <a href="./cal_expected_value.html?id=2">真・北斗無双 219ver</a><br><br>
 <a href="./cal_expected_value.html?id=3">真・北斗無双</a><br><br>
 <a href="./cal_expected_value.html?id=34">真・北斗無双 マーク 1</a><br><br>
