--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -142,6 +142,8 @@
 				break;
 			case "40":	
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"40","name":"CR攻殻機動隊S.A.C CXB","tokaBorder":"17.300","totalRate":"34.903","denSupRate":"0.120","rironAveDedama":"507.000","default1R":"81","active":"1"},"kishuAtariInfo":[{"id":"40","no":"1","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"324","shutsugenRate":"69.700"},{"id":"40","no":"2","upDown1":"down","round1":"8","upDown2":"-","round2":"0","roundSum":"8","tamasu":"648","shutsugenRate":"3.800"},{"id":"40","no":"3","upDown1":"down","round1":"12","upDown2":"-","round2":"0","roundSum":"12","tamasu":"972","shutsugenRate":"26.500"}]}');
+			case "41":	
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"41","name":"大海物語4 SBC","tokaBorder":"20.400","totalRate":"46.454","denSupRate":"0.70","rironAveDedama":"570.000","default1R":"87","active":"1"},"kishuAtariInfo":[{"id":"41","no":"1","upDown1":"down","round1":"5","upDown2":"-","round2":"0","roundSum":"5","tamasu":"435","shutsugenRate":"40.0"},{"id":"41","no":"2","upDown1":"down","round1":"7","upDown2":"-","round2":"0","roundSum":"7","tamasu":"609","shutsugenRate":"56.0"},{"id":"41","no":"3","upDown1":"down","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"1392","shutsugenRate":"4.0"}]}');
 				break;
 		        } 
 	
