--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 </h3>
 <a href="./cal_expected_value.html?id=7">大海物語スペシャル SAP13</a><br><br>
 <a href="./cal_expected_value.html?id=8">大海物語2 withアグネスラム SAA</a><br><br>
+<a href="./cal_expected_value.html?id=41">大海物語4 SBC</a><br><br>
 <a href="./cal_expected_value.html?id=15">大海物語4 MTB</a><br><br>
 <a href="./cal_expected_value.html?id=32">スーパー海物語 SAE5</a><br><br>
 <a href="./cal_expected_value.html?id=4">スーパー海物語IN沖縄4MTC</a><br><br>
