--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -149,6 +149,9 @@
 			case "42":	
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"42","name":"黄門ちゃま～神盛JUDGEMENT～L9BZ6","tokaBorder":"19.600","totalRate":"92.020","denSupRate":"0.75","rironAveDedama":"1173.000","default1R":"150","active":"1"},"kishuAtariInfo":[{"id":"42","no":"1","upDown1":"down","round1":"1","upDown2":"-","round2":"0","roundSum":"1","tamasu":"150","shutsugenRate":"7.0"},{"id":"42","no":"2","upDown1":"down","round1":"3","upDown2":"-","round2":"0","roundSum":"3","tamasu":"450","shutsugenRate":"54.800"},{"id":"42","no":"3","upDown1":"down","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"2400","shutsugenRate":"38.200"}]}');
 				break;
+			case "43":	
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"43","name":"ルパン三世～消されたルパンM9AZ","tokaBorder":"17.000","totalRate":"83.217","denSupRate":"0.480","rironAveDedama":"1256.220","default1R":"126","active":"1"},"kishuAtariInfo":[{"id":"43","no":"1","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"504","shutsugenRate":"28.000"},{"id":"43","no":"2","upDown1":"down","round1":"6","upDown2":"-","round2":"0","roundSum":"6","tamasu":"756","shutsugenRate":"10.200"},{"id":"43","no":"3","upDown1":"down","round1":"8","upDown2":"-","round2":"0","roundSum":"8","tamasu":"1008","shutsugenRate":"4.100"},{"id":"43","no":"4","upDown1":"down","round1":"10","upDown2":"-","round2":"0","roundSum":"10","tamasu":"1260","shutsugenRate":"14.900"},{"id":"43","no":"5","upDown1":"down","round1":"10","upDown2":"up","round2":"5","roundSum":"15","tamasu":"1890","shutsugenRate":"42.800"}]}');
+				break;
 		        } 
 	
 	    var kishuInfo = dispValue['kishuInfo'];
