--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <a href="./cal_expected_value.html?id=6">スーパー海物語IN沖縄4 SBB</a><br><br>
 <a href="./cal_expected_value.html?id=9">スーパー海物語in沖縄4~桜バージョン~</a><br><br>
 <a href="./cal_expected_value.html?id=22">スーパー海物語in沖縄4~桜バージョン 319~</a><br><br>
+<a href="./cal_expected_value.html?id=44">アントニオ猪木6 H1BZ8A</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
