--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -155,6 +155,9 @@
 			case "44":	
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"44","name":"アントニオ猪木6H1BZ8A","tokaBorder":"19.200","totalRate":"107.480","denSupRate":"0.190","rironAveDedama":"874.000","default1R":"110","active":"1"},"kishuAtariInfo":[{"id":"44","no":"1","upDown1":"down","round1":"2","upDown2":"-","round2":"0","roundSum":"2","tamasu":"219","shutsugenRate":"4.9"},{"id":"44","no":"2","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"437","shutsugenRate":"22.2"},{"id":"44","no":"3","upDown1":"down","round1":"6","upDown2":"-","round2":"0","roundSum":"6","tamasu":"656","shutsugenRate":"39.7"},{"id":"44","no":"4","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"448","shutsugenRate":"6.7"},{"id":"44","no":"5","upDown1":"down","round1":"16","upDown2":"up","round2":"5","roundSum":"16","tamasu":"1792","shutsugenRate":"26.6"}]}');
 				break;
+			case "45":	
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"45","name":"Another FPW","tokaBorder":"19.600","totalRate":"35.104","denSupRate":"0.12","rironAveDedama":"455.000","default1R":"45","active":"1"},"kishuAtariInfo":[{"id":"45","no":"1","upDown1":"down","round1":"5","upDown2":"-","round2":"0","roundSum":"5","tamasu":"226","shutsugenRate":"29.9"},{"id":"45","no":"2","upDown1":"down","round1":"10","upDown2":"-","round2":"0","roundSum":"10","tamasu":"453","shutsugenRate":"39.6"},{"id":"45","no":"3","upDown1":"down","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"680","shutsugenRate":"30.6"}]}');
+				break;
 		        } 
 	
 	    var kishuInfo = dispValue['kishuInfo'];
