--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 <a href="./cal_expected_value.html?id=9">スーパー海物語in沖縄4~桜バージョン~</a><br><br>
 <a href="./cal_expected_value.html?id=22">スーパー海物語in沖縄4~桜バージョン 319~</a><br><br>
 <a href="./cal_expected_value.html?id=44">アントニオ猪木6 H1BZ8A</a><br><br>
+<a href="./cal_expected_value.html?id=45">Another FPW</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
