--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 <a href="./cal_expected_value.html?id=29">黄門ちゃま超寿～日本漫遊2700km L9AZ</a><br><br>
 <a href="./cal_expected_value.html?id=42">黄門ちゃま～神盛JUDGEMENT～L9BZ6</a><br><br>
 <a href="./cal_expected_value.html?id=40">攻殻機動隊S.A.C CXB</a><br><br>
+<a href="./cal_expected_value.html?id=46">緋弾のアリア2 FPWZ</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
