--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -160,7 +160,10 @@
 				break;
 			case "46":	
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"46","name":"緋弾のアリア2 FPWZ","tokaBorder":"19.200","totalRate":"35.740","denSupRate":"1.210","rironAveDedama":"466","default1R":"60","active":"1"},"kishuAtariInfo":[{"id":"46","no":"1","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"242","shutsugenRate":"3.300"},{"id":"46","no":"2","upDown1":"down","round1":"6","upDown2":"-","round2":"0","roundSum":"6","tamasu":"364","shutsugenRate":"75.500"},{"id":"46","no":"3","upDown1":"down","round1":"10","upDown2":"-","round2":"0","roundSum":"10","tamasu":"606","shutsugenRate":"3.300"},{"id":"46","no":"4","upDown1":"down","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"910","shutsugenRate":"18.000"}]}');
-			    break;
+			    break
+			case "47":	
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"37","name":"戦国乙女～花～9BU","tokaBorder":"18.3","totalRate":"32.546","denSupRate":"1.13","rironAveDedama":"447","default1R":"69","active":"1"},"kishuAtariInfo":[{"id":"47","no":"1","upDown1":"down","round1":"2","upDown2":"-","round2":"0","roundSum":"2","tamasu":"138","shutsugenRate":"6.2"},{"id":"47","no":"2","upDown1":"down","round1":"6","upDown2":"-","round2":"0","roundSum":"6","tamasu":"416","shutsugenRate":"86.6"},{"id":"47","no":"3","upDown1":"down","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"1080","shutsugenRate":"7.3"}]}');
+				break;
 		        } 
 	
 	    var kishuInfo = dispValue['kishuInfo'];
