--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 <a href="./cal_expected_value.html?id=20">真・花の慶次2</a><br><br>
 <a href="./cal_expected_value.html?id=25">銭形平次withでんぱ組.inc SMA</a><br><br>
 <a href="./cal_expected_value.html?id=26">銭形平次withでんぱ組.inc SAA 1/99</a><br><br>
+<a href="./cal_expected_value.html?id=47">戦国乙女～花～9BU</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
