--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -160,9 +160,12 @@
 				break;
 			case "46":	
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"46","name":"緋弾のアリア2 FPWZ","tokaBorder":"19.200","totalRate":"35.740","denSupRate":"1.210","rironAveDedama":"466","default1R":"60","active":"1"},"kishuAtariInfo":[{"id":"46","no":"1","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"242","shutsugenRate":"3.300"},{"id":"46","no":"2","upDown1":"down","round1":"6","upDown2":"-","round2":"0","roundSum":"6","tamasu":"364","shutsugenRate":"75.500"},{"id":"46","no":"3","upDown1":"down","round1":"10","upDown2":"-","round2":"0","roundSum":"10","tamasu":"606","shutsugenRate":"3.300"},{"id":"46","no":"4","upDown1":"down","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"910","shutsugenRate":"18.000"}]}');
-			    break
+			    break;
 			case "47":	
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"37","name":"戦国乙女～花～9BU","tokaBorder":"18.3","totalRate":"32.546","denSupRate":"1.13","rironAveDedama":"447","default1R":"69","active":"1"},"kishuAtariInfo":[{"id":"47","no":"1","upDown1":"down","round1":"2","upDown2":"-","round2":"0","roundSum":"2","tamasu":"138","shutsugenRate":"6.2"},{"id":"47","no":"2","upDown1":"down","round1":"6","upDown2":"-","round2":"0","roundSum":"6","tamasu":"416","shutsugenRate":"86.6"},{"id":"47","no":"3","upDown1":"down","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"1080","shutsugenRate":"7.3"}]}');
+				break;
+			case "48":	
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"48","name":"戦姫絶唱シンフォギア","tokaBorder":"21.200","totalRate":"56.540","denSupRate":"0.100","rironAveDedama":"687.505","default1R":"91","active":"1"},"kishuAtariInfo":[{"id":"48","no":"1","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"364","shutsugenRate":"63.900"},{"id":"48","no":"2","upDown1":"down","round1":"8","upDown2":"-","round2":"0","roundSum":"8","tamasu":"728","shutsugenRate":"5.000"},{"id":"48","no":"3","upDown1":"down","round1":"12","upDown2":"-","round2":"0","roundSum":"12","tamasu":"1092","shutsugenRate":"2.200"},{"id":"48","no":"4","upDown1":"down","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"1365","shutsugenRate":"28.900"}]}');
 				break;
 		        } 
 	
