--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 <a href="./cal_expected_value.html?id=25">銭形平次withでんぱ組.inc SMA</a><br><br>
 <a href="./cal_expected_value.html?id=26">銭形平次withでんぱ組.inc SAA 1/99</a><br><br>
 <a href="./cal_expected_value.html?id=47">戦国乙女～花～9BU</a><br><br>
+<a href="./cal_expected_value.html?id=48">戦姫絶唱シンフォギア</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
@@ -137,5 +138,4 @@
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 </body>
-</html>
-
+</html
