--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -167,6 +167,9 @@
 			case "48":	
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"48","name":"戦姫絶唱シンフォギア","tokaBorder":"21.200","totalRate":"56.540","denSupRate":"0.100","rironAveDedama":"687.505","default1R":"91","active":"1"},"kishuAtariInfo":[{"id":"48","no":"1","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"364","shutsugenRate":"63.900"},{"id":"48","no":"2","upDown1":"down","round1":"8","upDown2":"-","round2":"0","roundSum":"8","tamasu":"728","shutsugenRate":"5.000"},{"id":"48","no":"3","upDown1":"down","round1":"12","upDown2":"-","round2":"0","roundSum":"12","tamasu":"1092","shutsugenRate":"2.200"},{"id":"48","no":"4","upDown1":"down","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"1365","shutsugenRate":"28.900"}]}');
 				break;
+			case "49":	
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"159","name":"ウルトラバトル烈伝 C4","tokaBorder":"18.300","totalRate":"29.848","denSupRate":"1.260","rironAveDedama":"424.800","default1R":"72","active":"1"},"kishuAtariInfo":[{"id":"159","no":"1","upDown1":"down","round1":"5","upDown2":"-","round2":"0","roundSum":"5","tamasu":"360","shutsugenRate":"86.200"},{"id":"159","no":"2","upDown1":"up","round1":"5","upDown2":"-","round2":"0","roundSum":"5","tamasu":"360","shutsugenRate":"3.600"},{"id":"159","no":"3","upDown1":"up","round1":"7","upDown2":"-","round2":"0","roundSum":"7","tamasu":"504","shutsugenRate":"2.000"},{"id":"159","no":"4","upDown1":"up","round1":"9","upDown2":"-","round2":"0","roundSum":"9","tamasu":"648","shutsugenRate":"0.600"},{"id":"159","no":"5","upDown1":"up","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"1152","shutsugenRate":"1.700"},{"id":"159","no":"6","upDown1":"down","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"1152","shutsugenRate":"5.900"}]}');
+				break;
 		        } 
 	
 	    var kishuInfo = dispValue['kishuInfo'];
