--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -170,6 +170,9 @@
 			case "49":	
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"49","name":"ウルトラバトル烈伝 C4","tokaBorder":"18.300","totalRate":"29.848","denSupRate":"1.260","rironAveDedama":"424.800","default1R":"72","active":"1"},"kishuAtariInfo":[{"id":"49","no":"1","upDown1":"down","round1":"5","upDown2":"-","round2":"0","roundSum":"5","tamasu":"360","shutsugenRate":"86.200"},{"id":"49","no":"2","upDown1":"up","round1":"5","upDown2":"-","round2":"0","roundSum":"5","tamasu":"360","shutsugenRate":"3.600"},{"id":"49","no":"3","upDown1":"up","round1":"7","upDown2":"-","round2":"0","roundSum":"7","tamasu":"504","shutsugenRate":"2.000"},{"id":"49","no":"4","upDown1":"up","round1":"9","upDown2":"-","round2":"0","roundSum":"9","tamasu":"648","shutsugenRate":"0.600"},{"id":"49","no":"5","upDown1":"up","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"1152","shutsugenRate":"1.700"},{"id":"159","no":"6","upDown1":"down","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"1152","shutsugenRate":"5.900"}]}');
 				break;
+			case "50":	
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"50","name":"偽物語 LTD","tokaBorder":"18.800","totalRate":"104.807","denSupRate":"0.590","rironAveDedama":"1396.044","default1R":"117","active":"1"},"kishuAtariInfo":[{"id":"50","no":"1","upDown1":"down","round1":"6","upDown2":"-","round2":"0","roundSum":"6","tamasu":"702","shutsugenRate":"13.000"},{"id":"50","no":"2","upDown1":"down","round1":"8","upDown2":"-","round2":"0","roundSum":"8","tamasu":"936","shutsugenRate":"34.600"},{"id":"50","no":"3","upDown1":"down","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"1872","shutsugenRate":"52.400"}]}');
+				break;
 		        } 
 	
 	    var kishuInfo = dispValue['kishuInfo'];
