--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 <h3 id="na">な行
 <a href="#mokuzi">目次に戻る</a><br>
 </h3>
+<a href="./cal_expected_value.html?id=50"偽物語 LTD></a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
