--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 <a href="./cal_expected_value.html?id=12">魔法先生ネギま！ MM</a><br><br>
 <a href="./cal_expected_value.html?id=17">麻雀物語~役満乱舞のドラム大戦~M2BU3</a><br><br>
 <a href="./cal_expected_value.html?id=19">モンスターハンター４　FA</a><br><br>
+<a href="./cal_expected_value.html?id=51">ミリオンゴット　YMB</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
