--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
 <a href="./cal_expected_value.html?id=5">ルパン三世~Lupin The End~99ver.</a><br><br>
 <a href="./cal_expected_value.html?id=43">ルパン三世～消されたルパンM9AZ</a><br><br>
 <a href="./cal_expected_value.html?id=31">リング～終焉の刻 FPW</a><br><br>
+<a href="./cal_expected_value.html?id=52">RAIZINMAN Z</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
