--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -174,7 +174,10 @@
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"50","name":"偽物語 LTD","tokaBorder":"18.800","totalRate":"104.807","denSupRate":"0.590","rironAveDedama":"1396.044","default1R":"117","active":"1"},"kishuAtariInfo":[{"id":"50","no":"1","upDown1":"down","round1":"6","upDown2":"-","round2":"0","roundSum":"6","tamasu":"702","shutsugenRate":"13.000"},{"id":"50","no":"2","upDown1":"down","round1":"8","upDown2":"-","round2":"0","roundSum":"8","tamasu":"936","shutsugenRate":"34.600"},{"id":"50","no":"3","upDown1":"down","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"1872","shutsugenRate":"52.400"}]}');
 				break;
 			case "51":	
-				var dispValue = JSON.parse('{"kishuInfo":{"id":"32","name":"ミリオンゴット　YMB","tokaBorder":"19.7","totalRate":"109.285","denSupRate":"0.51","rironAveDedama":"1393","default1R":"138","active":"1"},"kishuAtariInfo":[{"id":"51","no":"1","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"552","shutsugenRate":"48.6"},{"id":"51","no":"2","upDown1":"down","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"2208","shutsugenRate":"51.4"}]}');
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"51","name":"ミリオンゴット　YMB","tokaBorder":"19.7","totalRate":"109.285","denSupRate":"0.51","rironAveDedama":"1393","default1R":"138","active":"1"},"kishuAtariInfo":[{"id":"51","no":"1","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"552","shutsugenRate":"48.6"},{"id":"51","no":"2","upDown1":"down","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"2208","shutsugenRate":"51.4"}]}');
+				break;
+			case "52":	
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"52","name":"RAIZINMAN Z","tokaBorder":"8.000","totalRate":"58.559","denSupRate":"0.05","rironAveDedama":"1845","default1R":"123","active":"1"},"kishuAtariInfo":[{"id":"52","no":"1","upDown1":"down","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"1845","shutsugenRate":"100.0"}]}');
 				break;
 		        } 
 	
