--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -179,6 +179,12 @@
 			case "52":	
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"52","name":"RAIZINMAN Z","tokaBorder":"8.000","totalRate":"58.559","denSupRate":"0.05","rironAveDedama":"1845","default1R":"123","active":"1"},"kishuAtariInfo":[{"id":"52","no":"1","upDown1":"down","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"1845","shutsugenRate":"100.0"}]}');
 				break;
+			case "53":	
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"53","name":"RAIZINMAN Z","tokaBorder":"5.02","totalRate":"32.0","denSupRate":"0.05","rironAveDedama":"1845","default1R":"123","active":"1"},"kishuAtariInfo":[{"id":"53","no":"1","upDown1":"down","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"1845","shutsugenRate":"100.0"}]}');
+				break;
+			case "54":	
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"54","name":"RAIZINMAN Z","tokaBorder":"1.00","totalRate":"19.0","denSupRate":"0.05","rironAveDedama":"1845","default1R":"123","active":"1"},"kishuAtariInfo":[{"id":"54","no":"1","upDown1":"down","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"1845","shutsugenRate":"100.0"}]}');
+				break;
 		        } 
 	
 	    var kishuInfo = dispValue['kishuInfo'];
