--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@
 <a href="./cal_expected_value.html?id=5">ルパン三世~Lupin The End~99ver.</a><br><br>
 <a href="./cal_expected_value.html?id=43">ルパン三世～消されたルパンM9AZ</a><br><br>
 <a href="./cal_expected_value.html?id=31">リング～終焉の刻 FPW</a><br><br>
-<a href="./cal_expected_value.html?id=52">RAIZINMAN Z</a><br><br>
+<a href="./cal_expected_value.html?id=52">RAIZINMAN Z 1/30 58.559 2.05 8.0</a><br><br>
+<a href="./cal_expected_value.html?id=53">RAIZINMAN Z 1/27 32.000 3.75 5.02</a><br><br>
+<a href="./cal_expected_value.html?id=54">RAIZINMAN Z 1/15 19.000 6.30 1.00</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
