--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -188,6 +188,10 @@
 			case "55":	
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"55","name":"RAIZINMAN Z","tokaBorder":"1.20","totalRate":"11.0","denSupRate":"0.05","rironAveDedama":"1910","default1R":"127","active":"1"},"kishuAtariInfo":[{"id":"55","no":"1","upDown1":"down","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"1910","shutsugenRate":"100.0"}]}');
 				break;
+			case "56":	
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"56","name":"エキサイト
+				FPSZ","tokaBorder":"15.100","totalRate":"39.396","denSupRate":"0.980","rironAveDedama":"655.775","default1R":"84","active":"1"},"kishuAtariInfo":[{"id":"56","no":"1","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"336","shutsugenRate":"52.100"},{"id":"56","no":"2","upDown1":"down","round1":"4","upDown2":"up","round2":"7","roundSum":"11","tamasu":"924","shutsugenRate":"11.700"},{"id":"56","no":"3","upDown1":"down","round1":"4","upDown2":"up","round2":"8","roundSum":"12","tamasu":"1008","shutsugenRate":"36.200"}]}');
+				break;
 		        } 
 	
 	    var kishuInfo = dispValue['kishuInfo'];
