--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <a href="./cal_expected_value.html?id=44">アントニオ猪木6 H1BZ8A</a><br><br>
 <a href="./cal_expected_value.html?id=45">Another FPW</a><br><br>
 <a href="./cal_expected_value.html?id=49">ウルトラバトル烈伝 C4</a><br><br>
+<a href="./cal_expected_value.html?id=56">エキサイト FPSZ</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
