--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -191,6 +191,12 @@
 			case "56":	
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"56","name":"エキサイトFPSZ","tokaBorder":"15.100","totalRate":"39.396","denSupRate":"0.980","rironAveDedama":"655.775","default1R":"84","active":"1"},"kishuAtariInfo":[{"id":"56","no":"1","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"336","shutsugenRate":"52.100"},{"id":"56","no":"2","upDown1":"down","round1":"4","upDown2":"up","round2":"7","roundSum":"11","tamasu":"924","shutsugenRate":"11.700"},{"id":"56","no":"3","upDown1":"down","round1":"4","upDown2":"up","round2":"8","roundSum":"12","tamasu":"1008","shutsugenRate":"36.200"}]}');
 				break;
+			case "57":	
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"57","name":"餃子の王将3 5000","tokaBorder":"1.20","totalRate":"22.600","denSupRate":"18.31","rironAveDedama":"4872","default1R":"84","active":"1"},"kishuAtariInfo":[{"id":"57","no":"1","upDown1":"down","round1":"58","upDown2":"-","round2":"0","roundSum":"58","tamasu":"4872","shutsugenRate":"100.0"}]}');
+				break;
+			case "58":	
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"58","name":"餃子の王将3 7000","tokaBorder":"1.14","totalRate":"31.965","denSupRate":"18.74","rironAveDedama":"7056","default1R":"112","active":"1"},"kishuAtariInfo":[{"id":"58","no":"1","upDown1":"down","round1":"63","upDown2":"-","round2":"0","roundSum":"63","tamasu":"7056","shutsugenRate":"100.0"}]}');
+				break;
 		        } 
 	
 	    var kishuInfo = dispValue['kishuInfo'];
