--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 <a href="./cal_expected_value.html?id=42">黄門ちゃま～神盛JUDGEMENT～L9BZ6</a><br><br>
 <a href="./cal_expected_value.html?id=40">攻殻機動隊S.A.C CXB</a><br><br>
 <a href="./cal_expected_value.html?id=46">緋弾のアリア2 FPWZ</a><br><br>
+<a href="./cal_expected_value.html?id=57">餃子の王将3　5000</a><br><br>
+<a href="./cal_expected_value.html?id=58">餃子の王将3　7000</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
